# company-data-generator

./: .env.example  Dockerfile  README.md  pyproject.toml
doc/: desgin.md
examples/: sample_company.md
output_test/: company_profile.json  document_plan.json
prompts/: auto_complete.md.j2  collect_info.md.j2  generate_document.md.j2  plan_documents.md.j2
src/company_data_generator/: __init__.py  cli.py  config.py  interaction.py  llm_client.py  models.py  prompt_store.py  runner.py  web.py
src/company_data_generator/agents/: base.py  doc_generator.py  doc_planner.py  info_collector.py
tests/: conftest.py  test_config.py  test_interaction.py  test_llm_client.py  test_models.py  test_prompt_store.py
tests/agents/: __init__.py  test_doc_generator.py  test_doc_planner.py  test_info_collector.py
